--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
                     <div class="bullets">
                         <div class="pill">
-                            <span class="icon">✓</span>
+                            <span class="icon">⚡</span>
                             <div>
                                 <b>No impact to performance</b>
                                 <small>Runs monitor-only mode inside the gateway data plane, engineered to
@@ -743,7 +743,7 @@
                             </div>
                         </div>
                         <div class="pill">
-                            <span class="icon">🧠</span>
+                            <span class="icon">✓</span>
                             <div>
                                 <b>Defensible evidence auditors trust</b>
                                 <small>Each record is tamper-evident, with a verifiable chain of
@@ -753,7 +753,7 @@
                         </div>
 
                         <div class="pill">
-                            <span class="icon">🔍</span>
+                            <span class="icon">🔌</span>
 
                             <div>
                                 <b>Fits into your existing SIEM / compliance workflows</b>
