--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OrbitMesh — Evidence of What Your Gateway Enforced</title>
     <meta name="description"
         content="OrbitMesh captures audit-grade evidence of what your API gateway actually enforced plus immutable config lineage—monitor-only, SIEM-ready." />
+    <script data-goatcounter="https://orbitmesh.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
