--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                             <div>
                                 <b>Up to 90% lower storage</b>
                                 <small>Shallow and deep evidence streams minimize noise while preserving full forensic
-                                    fidelity for audits and investigations.</small>
+                                    fidelity for audits and investigations per request level.</small>
                             </div>
                         </div>
                         <div class="pill">
