adding sitemap xml

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="OrbitMesh captures audit-grade evidence of what your API gateway actually enforced plus immutable config lineage—monitor-only, SIEM-ready." />
     <script data-goatcounter="https://orbitmesh.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
